[package]
name = "course_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.7"
serde_json = "1.0"
handlebars = "4.5.0"
crypto-hash = "0.3.4"
serde = { version = "1.0.193", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.31"
url = "2.5.0"
percent-encoding = "2.1"
